# FleetSign

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  README.md  config.example.json  install.sh  pyproject.toml  uninstall.sh
docs/: DESIGN_DECISIONS.md  USER_MANUAL.md
fleetsign/: __init__.py  __main__.py  config.py  logsetup.py  model.py  mpv_ipc.py  player.py  schedule.py  store.py  sync.py  validate.py  web.py
fleetsign/static/: style.css
fleetsign/templates/: index.html  login.html  setup.html  slave_joining.html  slave_status.html  slave_waiting.html
systemd/: fleetsign.service
tests/: test_config.py  test_logsetup.py  test_main.py  test_model.py  test_mpv_ipc.py  test_player.py  test_schedule.py  test_smoke.py  test_store.py  test_sync.py  test_web_auth.py  test_web_controls.py  test_web_master_ui.py  test_web_media.py  test_web_slave.py  test_web_sync.py
